--- a/themes/simplebootx/Public/css/style.css
+++ b/themes/simplebootx/Public/css/style.css
@@ -82,7 +82,7 @@ box-shadow: 0 5px 5px 0 rgba(50,50,50,0.1);
   text-align: center;
 	background: #fff;
 }
-.tc-gridbox .footer {
+.tc-gridbox  {
   padding: 5px 14px 5px 14px;
   text-align: right;
 	background: #fff;
@@ -514,6 +514,30 @@ ul.tc-photos{margin: 0;}
 	-o-transition: all 0.4s ease-in-out;
 	transition: all 0.4s ease-in-out;
 }
-
+.bottom-pic{
+	border: 1px solid #100964;
+	height: 302px;
+	width: 600px;
+	padding: 11px;
+	margin: 70px auto;}
+.bottom,footer{
+	background-image: url('../images/b-bg.jpg');
+	height: 150px;
+	text-align: center;
+	padding: 20px;}
+.bottom .title,.bottom .contact{
+	text-align: center;
+	padding-top: 30px;}
+.bottom span,footer span{
+	color: #fff;
+	margin: 10px;
+}
+.bottom .title,.bottom .title span{
+	height: 30px;
+	font-weight: 700;}
+footer{
+	z-index: 1000;
+	bottom: 0;
+	height: 20px;}
 
 		
