--- a/plugins/Demo/View/index.html
+++ b/plugins/Demo/View/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="ThinkCMF插件演示首页">
   <meta name="keywords" content="ThinkCMF插件演示首页">
   <meta name="viewport"  content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>ThinkCMF插件演示首页</title>
+  <title>忆·天堂插件演示首页</title>
 
   <!-- Set render engine for 360 browser -->
   <meta name="renderer" content="webkit">
